# glace

./: .gitignore  Cargo.toml  README.md
examples/: load_gltf.rs  load_obj.rs  simple_shapes.rs
src/: camera.rs  image_utils.rs  instances.rs  lib.rs  light.rs  main.rs  mesh.rs  model.rs  texture.rs  transform.rs
src/egui_plugin/: custom_egui_winit.rs  egui.wgsl  mod.rs
src/gltf_loader/: loader.rs  mod.rs
src/obj_loader/: loader.rs  mod.rs
src/renderer/: base_3d.rs  depth.rs  depth_pass.rs  mod.rs  plugin.rs  render_phase_3d.rs  render_phase_3d_plugin.rs  wireframe.rs
src/renderer/bind_groups/: material.rs  mesh_view.rs  mod.rs
src/renderer/shaders/: depth.wgsl  light.wgsl  shader.wgsl  wireframe.wgsl
src/shapes/: capsule.rs  cube.rs  cylinder.rs  mod.rs  plane.rs  quad.rs  sphere.rs
