[package]
name = "glace"
version = "0.1.0"
edition = "2021"

# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
wgpu = "0.16"
env_logger = "0.10"
winit = "0.28"
bevy = { version = "0.11", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_gltf",
    "bevy_render",
    "multi-threaded",
] }
log = "0.4"
bytemuck = { version = "1.7", features = ["derive"] }
image = "0.24"
anyhow = "1.0"
tobj = { version = "3.2.2", features = ["async"] }
futures-lite = "1.12.0"
egui = { version = "0.22.0", features = ["persistence"] }
egui-wgpu = "0.22.0"
ron = "0.8.0"
serde = "1.0.137"
bitflags = "2.4.0"
gltf = "1.0.0"
web-sys = "0.3.55"

[[example]]
name = "simple_shapes"
