[package]
name = "glace"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
wgpu = "0.19.1"
winit = "0.29.10"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "0166db33f7047a8a15be60ce4cd2384440168c8d", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "multi-threaded",
] }
anyhow = "1.0.79"
futures-lite = "2.2.0"
